# dash-uploader-uppy5

./: CHANGELOG.md  LICENSE  MANIFEST.in  README.md  main.py  package.json  pnpm-lock.yaml  pyproject.toml  tsconfig.json  usage.py  webpack.config.ts
dash_uploader_uppy5/: __init__.py  configurator.py  configure_upload.py  models.py  settings.py  upload.py  uploadhandler.py  utils.py
devscripts/: post_build.py
src/: index.ts
src/components/: DashUploaderUppy5.tsx
src/components/hooks/: useHandleCancelTrigger.ts  useHandleClearTrigger.ts  useHandleRetryTrigger.ts  useHandleUploadTrigger.ts  useSetupUppyEventHandlers.ts
src/components/types/: DashComponent.ts  Uploader.ts
src/components/utils/: buildLocaleString.ts  createStringUnionGuard.ts  createUppy.ts  hideDragOverHintStyle.ts
src/ts/: index.ts
src/ts/components/: DashUploaderUppy5.tsx
