[project]
name = "dash-uploader-uppy5"
version = "0.1.0"
description = "A modern Dash file uploader component powered by Uppy 5"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "build>=1.3.0",
    "cookiecutter>=2.6.0",
    "dash[dev]>=3.3.0",
    "wheel>=0.45.1",
]
