[build-system]
requires = ["setuptools >= 80.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dash-uploader-uppy5"
version = "0.1.0"
description = "A modern Dash file uploader component powered by Uppy 5"
license = "MIT"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dash>=3.3.0",
]

[tool.setuptools]
packages = ["dash_uploader_uppy5", "dash_uploader_uppy5.build"]

[tool.setuptools.package-data]
dash_uploader_uppy5 = ["build/**/*.js", "build/**/*.json"]

[dependency-groups]
dev = [
    "build>=1.3.0",
    "cookiecutter>=2.6.0",
    "dash[dev]>=3.3.0",
    "wheel>=0.45.1",
]
