[build-system]
requires = ["setuptools >= 82.0.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dash-uploader-uppy5"
version = "0.2.1"
description = "A modern Dash file uploader component powered by Uppy 5"
license = "MIT"
readme = "README.md"
requires-python = ">=3.13"
authors = [
    {name = "Zhixin Ou", email = "ozx1072960726@gmail.com"}
]
keywords = ["dash", "plotly", "uppy", "file-upload", "react", "flask", "streaming"]
classifiers = [
    "Framework :: Dash",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
]
dependencies = [
    "dash>=3.4.0",
    "pydantic>=2.13.4",
    "pyrefly>=0.60.0",
]

[project.urls]
Homepages = "https://github.com/Ozx-68102/dash-uploader-uppy5"
Repository = "https://github.com/Ozx-68102/dash-uploader-uppy5"
Issues = "https://github.com/Ozx-68102/dash-uploader-uppy5/issues"

[tool.setuptools]
packages = ["dash_uploader_uppy5", "dash_uploader_uppy5.build"]

[tool.setuptools.package-data]
dash_uploader_uppy5 = ["build/**/*.js", "build/**/*.json"]

[dependency-groups]
dev = [
    "build>=1.3.0",
    "cookiecutter>=2.7.1",
    "dash[dev]>=3.4.0, <4.0.0",
    "twine>=6.2.0",
    "wheel>=0.47.0",
]
